Fix runtime compilation for JDK 25: use ForwardingJavaFileManager and MemoryClassLoader